[tool.poetry]
name = "pigrometer"
version = "0.dev"
description = "An app for capturing temperature/humidity readings on a raspberrry pi and displaying the information through a web interface"
authors = ["Brian Moody <brian.k.moody@outlook.com>"]
repository = "https://github.com/BrianKmdy/PiGrometer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
adafruit-circuitpython-dht = "^3.7.7"
"RPi.GPIO" = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
